# soundcraft

./: .env.example  .gitignore  LICENSE  README.ja.md  README.md  pyproject.toml
src/soundcraft/: __main__.py  cli.py  config.py  generate.py  generate_lyria.py  prompt.py
tasks/: session_log.md  todo.md
